WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30307
[GStreamer] Missing sentinel in g_object_set() call
https://bugs.webkit.org/show_bug.cgi?id=30307
Summary
[GStreamer] Missing sentinel in g_object_set() call
Sebastian Dröge (slomo)
Reported
2009-10-12 08:50:03 PDT
[...] CXX WebCore/platform/graphics/gtk/libWebCore_la-DataSourceGStreamer.lo WebCore/platform/graphics/gtk/DataSourceGStreamer.cpp: In function ‘gboolean webkit_data_src_uri_set_uri(GstURIHandler*, const gchar*)’: WebCore/platform/graphics/gtk/DataSourceGStreamer.cpp:217: warning: missing sentinel in function call Problem is, that 0 is an integer and integers are passed as 32 bit values on x86-64 while the function expects a 64 bit 0 as sentinel. This will cause crashes and havoc. Attached trivial patch fixes this.
Attachments
0001-Fix-0-sentinel-for-g_object_set-function-call.patch
(2.29 KB, patch)
2009-10-12 08:55 PDT
,
Sebastian Dröge (slomo)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sebastian Dröge (slomo)
Comment 1
2009-10-12 08:55:21 PDT
Created
attachment 41046
[details]
0001-Fix-0-sentinel-for-g_object_set-function-call.patch
Gustavo Noronha (kov)
Comment 2
2009-10-12 10:49:26 PDT
Comment on
attachment 41046
[details]
0001-Fix-0-sentinel-for-g_object_set-function-call.patch I'm not sure about the reasoning. I'm pretty sure gcc will complain about this, but I don't think we ever had a crash related to this. The patch is good, though.
WebKit Commit Bot
Comment 3
2009-10-12 11:09:24 PDT
Comment on
attachment 41046
[details]
0001-Fix-0-sentinel-for-g_object_set-function-call.patch Clearing flags on attachment: 41046 Committed
r49445
: <
http://trac.webkit.org/changeset/49445
>
WebKit Commit Bot
Comment 4
2009-10-12 11:09:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug